src/test/snapshots/ruby_fast_lsp__test__integration_test__foo_class_ref.snap
---
source: src/test/integration_test.rs
expression: value
---
[
  {
    "range": {
      "end": {
        "character": 11,
        "line": 3
      },
      "start": {
        "character": 8,
        "line": 3
      }
    },
    "uri": "file://$PROJECT_ROOT/src/test/fixtures/goto/const_single.rb"
  },
  {
    "range": {
      "end": {
        "character": 16,
        "line": 12
      },
      "start": {
        "character": 6,
        "line": 12
      }
    },
    "uri": "file://$PROJECT_ROOT/src/test/fixtures/goto/const_single.rb"
  }
]
