src/test/snapshots/ruby_fast_lsp__test__integration_test__hello_class_method_def.snap
---
source: src/test/integration_test.rs
expression: value
---
[
  {
    "range": {
      "end": {
        "character": 18,
        "line": 5
      },
      "start": {
        "character": 13,
        "line": 5
      }
    },
    "uri": "file://$PROJECT_ROOT/src/test/fixtures/goto/method_single.rb"
  }
]
