src/test/snapshots/ruby_fast_lsp__test__integration_test__hello_instance_method_def.snap
---
source: src/test/integration_test.rs
expression: value
---
[
  {
    "range": {
      "end": {
        "character": 13,
        "line": 9
      },
      "start": {
        "character": 8,
        "line": 9
      }
    },
    "uri": "file://$PROJECT_ROOT/src/test/fixtures/goto/method_single.rb"
  }
]
