src/test/snapshots/ruby_fast_lsp__test__integration_test__helper_method_def_in_module_b.snap
---
source: src/test/integration_test.rs
expression: value
---
[
  {
    "range": {
      "end": {
        "character": 19,
        "line": 16
      },
      "start": {
        "character": 6,
        "line": 16
      }
    },
    "uri": "file://$PROJECT_ROOT/src/test/fixtures/goto/module_method_cross_ref.rb"
  }
]
