src/test/snapshots/ruby_fast_lsp__test__integration_test__inherited_set_cookie_method_def.snap
---
source: src/test/integration_test.rs
expression: value
---
[
  {
    "range": {
      "end": {
        "character": 20,
        "line": 15
      },
      "start": {
        "character": 10,
        "line": 15
      }
    },
    "uri": "file://$PROJECT_ROOT/src/test/fixtures/test_mixin_issue.rb"
  }
]
