src/test/snapshots/ruby_fast_lsp__test__integration_test__inner_class_nested_call_refs.snap
---
source: src/test/integration_test.rs
expression: value
---
[
  {
    "range": {
      "end": {
        "character": 12,
        "line": 66
      },
      "start": {
        "character": 2,
        "line": 66
      }
    },
    "uri": "file://$PROJECT_ROOT/src/test/fixtures/method_context_resolution.rb"
  }
]
